Changed if statement to switch

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>Card Game</title>
     <link rel="stylesheet" href="index.css" />
+    <script defer type="text/javascript" src="index.js"></script>
 </head>
 
 <body>
@@ -49,7 +50,7 @@
 
                 <!-- cards here -->
             </div>
-            <script type="text/javascript" src="index.js"></script>
+           
         </div>
 
 </body>
