Added new number field

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <br />
                 <input type="text" name="image" value="" placeholder="Enter your player name..." class="input-text" />
                 <br />
+                <input type="number" name="money" value="" placeholder="Enter your amount..." class="input-number" />
+                <br />
                 <input type="submit" name="submit" value="Introduce" class="buttons" />
             </form>
         </div>
