--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
                     <h2 id="playerBank"></h2>
                 </div>
             </div>
-            <div id="cards-image-containers">
-
-                <!-- cards here -->
-            </div>
+            <div id="housecards-image-containers" />
+            </div id="guestcards-image-containers" />
            
         </div>
 
