Added conditions to the second fetch

--- a/index.html
+++ b/index.html
@@ -39,20 +39,25 @@
             <button type="button" id="gameOn-button" class="block">Lets play!</button>
             <button type="evaluate" id="evaluate-button" class="block2">Evaluate Game</button>
             <div class='bank-container'>
-                <div class = "center">
+                <div class="center">
                     <h2 id="houseBank"></h2>
                     <h2 id="house"></h2>
                 </div>
-                <div class = "center">
+                <div class="center">
                     <h2 id="playerName"></h2>
                     <h2 id="playerBank"></h2>
                 </div>
             </div>
             <div id="cards-image-containers">
-
-                <!-- cards here -->
+                <!-- initial cards here -->
             </div>
-           
+            <div id="extraHOUSEcards-container">
+                <!-- additioinal house cards here -->
+            </div>
+            <div id="extraGUESTcards-container">
+                <!-- additioinal guest cards here -->
+            </div>
+
         </div>
 
 </body>
