Replaced display cards with a function

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <br />
         <div class="game-container">
             <button type="button" id="gameOn-button" class="block">Lets play!</button>
-            <button type="evaluate" id="evaluate-button" class="block2">Evaluate Game</button>
+            <button type="evaluate" id="evaluate-button" class="block2"></button>
             <div class='bank-container'>
                 <div class="center">
                     <h2 id="houseBank"></h2>
@@ -51,13 +51,14 @@
             <div id="cards-image-containers">
                 <!-- initial cards here -->
             </div>
+            <div id="extra-cards-container">
             <div id="extraHOUSEcards-container">
                 <!-- additioinal house cards here -->
             </div>
             <div id="extraGUESTcards-container">
                 <!-- additioinal guest cards here -->
             </div>
-
+            </div>
         </div>
         <script type="text/javascript" src="index.js"></script>
 </body>
