Added logic to hit or stand

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Card Game</title>
     <link rel="stylesheet" href="index.css" />
-    
+
 </head>
 
 <body>
@@ -40,24 +40,26 @@
             <button type="evaluate" id="evaluate-button" class="block2"></button>
             <div class='bank-container'>
                 <div class="center">
-                    <h2 id="houseBank"></h2>
-                    <h2 id="house"></h2>
+                    <h2 id="guestScoreBoard"></h2>
+                    <h2 id="guestBank"></h2>
+                    <h2 id="guestName"></h2>
+                    
                 </div>
                 <div class="center">
-                    <h2 id="playerName"></h2>
-                    <h2 id="playerBank"></h2>
+                    <h2 id="houseName"></h2>
+                    <h2 id="houseBank"></h2>
+                    <h2 id="houseScoreBoard"></h2>
                 </div>
             </div>
             <div id="cards-image-containers">
-                <!-- initial cards here -->
-            </div>
-            <div id="extra-cards-container">
-            <div id="extraHOUSEcards-container">
-                <!-- additioinal house cards here -->
-            </div>
-            <div id="extraGUESTcards-container">
-                <!-- additioinal guest cards here -->
-            </div>
+
+                <div id="extraHOUSEcards-container">
+                    <!-- house cards here -->
+                </div>
+                <div id="extraGUESTcards-container">
+                    <!-- guest cards here -->
+                </div>
+
             </div>
         </div>
         <script type="text/javascript" src="index.js"></script>
