--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div id="bet-container">
             <!-- <h1 id="instruction2"></h1> -->
-            <h1 id='bet'>5</h1>
+            <h1 id='bet'></h1>
             <div class="bet-buttons">
                 <button id='increase' class="buttons" style="font-size:16px"> &#43; </button>
                 <button id='decrease' class="buttons" style="font-size:16px"> &#8722; </button>
@@ -52,14 +52,12 @@
                 </div>
             </div>
             <div id="cards-image-containers">
-
                 <div id="extraHOUSEcards-container">
                     <!-- house cards here -->
                 </div>
                 <div id="extraGUESTcards-container">
                     <!-- guest cards here -->
                 </div>
-
             </div>
         </div>
         <script type="text/javascript" src="index.js"></script>
